# 3-package-mountain_goat

./: Pipfile  README.md  example.py  pyproject.toml
.github/workflows/: ci.yml
barkpy/: __init__.py  core.py
tests/: test_core.py
