[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "barkpy"
version = "0.1.0"
description = "A lighthearted Python package that gives developers dog-themed emotional support."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "barkpy team" }
]
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]