[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "barkpy"
version = "0.1.0"
description = "A lighthearted Python package that gives developers dog-themed emotional support."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "barkpy team" }
]
keywords = ["python", "package", "dogs", "fun"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest", "build", "twine"]

[project.urls]
"Homepage" = "https://github.com/swe-students-spring2026/3-package-mountain_goat"
"Repository" = "https://github.com/swe-students-spring2026/3-package-mountain_goat.git"
"Bug Tracker" = "https://github.com/swe-students-spring2026/3-package-mountain_goat/issues"

[project.scripts]
barkpy-demo = "example:main"